# maestro_captive

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  update.sh
config/: maestro.conf
include/controllers/: CaptivePortalController.h  ServiceController.h  WiFiController.h
include/services/: HardwareSecurityService.h  HomeAssistantService.h  WiFiManagerService.h
include/utils/: ConfigManager.h  Logger.h  WiFiUtils.h
scripts/: build-portable.sh  build.sh  install.sh  install_dependencies.sh
src/: main.cpp
src/controllers/: CaptivePortalController.cpp  ServiceController.cpp  WiFiController.cpp
src/services/: HardwareSecurityService.cpp  HomeAssistantService.cpp  WiFiManagerService.cpp
src/utils/: ConfigManager.cpp  Logger.cpp  WiFiUtils.cpp
test/: README.md
test/temporary/: captive_portal_test.sh  ui_workflow_test.html  wifi_scan_test.cpp
web/static/css/: style.css
web/static/js/: app.js
web/templates/: index.html
